Created node endpoint to create certificates
